kubectl/react-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-deployment
  labels:
    app: react-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app-deployment
  # template for the pod
  template:
    metadata:
      labels:
        app: react-app-deployment
    # blue prints for container inside pod
    spec:
      containers:
        - image: shrikantsharma606/react-app:v2
          # IfNotPresent Always Never
          imagePullPolicy: Never
          name: react-app-deployment
          ports:
            - containerPort: 80
