kubectl/react-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
  labels:
    run: react-app-service
spec:
  selector:
    app: react-app-deployment
  # if type is not specified, then by default it uses the clusterIp which is not accessible inside only but not by brower
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
