kubectl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: default
  # namespace: kubernetes-dashboard
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: '/(/|$)(.*)'
            pathType: Prefix
            backend:
              service:
                name: spring-boot-app-service
                port:
                  number: 8080
